# Analise-Claude

./: .gitignore  .mcp.json  ANALISE_COMPLETA.md  ANALISE_VIABILIDADE_XIAOMI_MIMO.md  AVALIACAO_FERRAMENTAS_IA.md  BASE_CONHECIMENTO.md  CHECKPOINT_21062026.md  CHECKPOINT_29052026_1.md  CHECKPOINT_29052026_2.md  CHECKPOINT_29052026_3.md  CHECKPOINT_29052026_4.md  CLAUDE.md  CONTEXTO.json  ESTRATEGIA_REDES_SOCIAIS.md  INSTRUCOES_CLAUDE.md  INTEGRACAO_CLAUDE_MANAGED_AGENTS.md  INTEGRACAO_FIRECRAWL_MCP.md  INTEGRACAO_MARKITDOWN_MCP.md  INTEGRACAO_PONYTAIL.md  INTEGRACAO_SCRAPLING.md  METRICOOL_MCP_SETUP.md  N8N_LOCAL_INSTALL.md  ORACULO.md  PROGRESSO_FASE1.md  README.md  SEGURANCA.md  SISTEMA_HOSPITALAR_INTEL_09-06-26.md  skills-lock.json  vercel.json
.claude/skills/: PONYTAIL-SOURCE.txt
.claude/skills/context-engineering/: SKILL.md
.github/workflows/: deploy-pages.yml
context-mcp/: README.md  pyproject.toml
context-mcp/src/analise_context_mcp/: __init__.py  __main__.py  config.py  repo.py  server.py
context-mcp/tests/: test_repo.py  test_server.py
dashboard/: index.html
frontend/: README.md  index.html
metricool-mcp/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
metricool-mcp/src/metricool_mcp/: __init__.py  __main__.py  client.py  config.py  networks.py  resources.py  server.py
metricool-mcp/src/metricool_mcp/tools/: __init__.py  ads.py  analytics.py  brands.py  competitors.py  generic.py  media.py  scheduler.py  timing.py
metricool-mcp/tests/: test_client.py  test_networks.py  test_server.py
n8n-local/: docker-compose.yml
scripts/: Connect-Claude.ps1  Connect-N8nClaude.ps1  Install-N8nNative.ps1  README.md  bootstrap.ps1  connect-claude-desktop.ps1  iniciar-claude.ps1
workflows/: WF-BUSCADOR-FORNECEDORES.json  WF-BUSCADOR-FORNECEDORES.md
