[project]
name = "analise-context-mcp"
version = "1.0.0"
description = "MCP server que entrega a memória/contexto do projeto Análise-Claude (Hospitalar Soluções em Saúde) a qualquer agente, para restaurar contexto e performar com orientação consistente."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "mcp[cli]>=1.6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
analise-context-mcp = "analise_context_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/analise_context_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
