[project]
name = "metricool-mcp-swiss"
version = "1.0.0"
description = "Canivete suíço MCP para o Metricool — superset do MCP oficial com cliente resiliente (retry/backoff), erros estruturados, agendamento/edição/exclusão de posts, normalização de mídia, resolução de marca por nome e uma ferramenta genérica para qualquer endpoint da API."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Hospitalar Soluções em Saúde" },
]
keywords = ["mcp", "metricool", "social-media", "analytics", "scheduler", "llm"]
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.6",
]

[project.scripts]
metricool-mcp = "metricool_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/metricool_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
